# camscanner-clone

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
src/: four_point_transform.py  order_points.py  process_document.py
static/: index.html  script.js  style.css
tests/: test_api.py  test_processing.py
