[project]
name = "camscanner-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.2",
    "img2pdf>=0.6.3",
    "numpy>=2.2.6",
    "opencv-python-headless>=5.0.0.93",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
